--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: registry.gitlab.com/lilypond-projects/lilylib:lilypond-2.19.80
+image: registry.gitlab.com/lilypond-projects/lilylib/lilypond:2.19.83
 
 variables:
     GIT_SUBMODULE_STRATEGY: normal
